fix collapsable menu, add web title and subtitle from settings.py

--- a/rstsite/static/css/base.css
+++ b/rstsite/static/css/base.css
@@ -1,4 +1,31 @@
 /* base.css */
+.rsts-header {
+    /*border:1px solid;*/
+    margin:1px;
+    padding:1px;
+    /*overflow:auto;*/
+}
+
+.rsts-brand {
+    margin:0px;
+    padding:0px;
+    /*border:1px solid red;*/
+    float:left;
+}
+
+.soiola {
+    margin:0px;
+    padding: 1px 5px !important;
+    /*padding-top:0px;
+    padding-bottom:0px;
+    padding-left:5px;
+    padding-right:5px;*/
+    min-height:0px;
+}
+
+.nitem-size {
+    font-size: small;
+}
 
 /*h1{
     font-size: large;
